...
                android:textColor="@color/colorGray"
                android:layout_marginLeft="8dp"
                >

            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcBestMovie"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                tools:listitem="@layout/best_movie_item"
                />
            <RelativeLayout
                android:layout_width="560dp"
...
                    style="@style/whiteTextColor"
                    android:layout_toRightOf="@+id/tvshowCase"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="5dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcShowCase"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/tvMoreShowCase"
                    tools:listitem="@layout/show_case_item"
...
