...
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">
                <ImageView
                    android:id="@+id/movie_poster_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/movietester1"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="13dp"
...
